--- a/app/src/main/res/layout/budget_list_item.xml
+++ b/app/src/main/res/layout/budget_list_item.xml
@@ -1,32 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp"
-    >
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/budget_list_name_text_view"
-        android:layout_marginTop="2dp"
-        android:textSize="50sp"
-        android:text="#50"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/budget_list_value_text_view"
-        android:layout_marginTop="50dp"
-        android:textSize="30sp"
-        android:text="#30"
-        />
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="2dp">
 
-    <TextView
-        android:id="@+id/budget_list_remaining_value_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:layout_marginTop="50dp"
-        android:text="#30"
-        android:textSize="30sp" />
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:cardBackgroundColor="?attr/cardBackgroundColor"
+        tools:ignore="PrivateResource">
+
+        <TextView
+            android:id="@+id/budget_list_name_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:text="#50"
+            android:textSize="50sp"
+            android:textColor="?attr/textColor"/>
+
+        <TextView
+            android:id="@+id/budget_list_value_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:text="#30"
+            android:textSize="30sp"
+            android:textColor="?attr/textColor"/>
+
+
+        <TextView
+            android:id="@+id/budget_list_remaining_value_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginTop="50dp"
+            android:text="#30"
+            android:textSize="30sp"
+            android:textColor="?attr/textColor" />
+    </androidx.cardview.widget.CardView>
 </FrameLayout>
