--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,34 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="?attr/backgroundColor">
 
     <EditText
         android:id="@+id/login_username_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="180dp"
         android:layout_marginLeft="50dp"
+        android:layout_marginTop="180dp"
         android:layout_marginRight="50dp"
-        android:padding="10dp"
         android:autofillHints="email"
         android:hint="@string/login_prompt"
-        android:inputType="textEmailAddress" />
+        android:inputType="textEmailAddress"
+        android:padding="10dp"
+        android:textColor="?attr/textColor" />
 
     <EditText
         android:id="@+id/login_password_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
         android:layout_below="@+id/login_username_edit_text"
-        android:padding="10dp"
         android:layout_centerHorizontal="true"
-        android:hint="@string/password_prompt"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="50dp"
         android:autofillHints="password"
-        android:inputType="textPassword" />
+        android:hint="@string/password_prompt"
+        android:inputType="textPassword"
+        android:padding="10dp"
+        android:textColor="?attr/textColor" />
 
     <Button
         android:id="@+id/login_sign_in_button"
@@ -36,8 +39,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/login_password_edit_text"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
         android:layout_marginLeft="50dp"
+        android:layout_marginTop="20dp"
         android:layout_marginRight="50dp"
         android:text="@string/login_action" />
 
@@ -47,8 +50,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/login_sign_in_button"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
         android:layout_marginLeft="50dp"
+        android:layout_marginTop="5dp"
         android:layout_marginRight="50dp"
         android:text="@string/register_action" />
 
@@ -63,6 +66,6 @@
         android:text="@string/login_credentials_error"
         android:textColor="@color/login_error_color"
         android:textSize="12sp"
-        android:visibility="invisible"/>
+        android:visibility="invisible" />
 
 </RelativeLayout>
