--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,21 +1,83 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <!--light mode application theme without actionbar. -->
+    <style name="AppTheme.NoActionBarLight" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="backgroundColor">#FFFFFF</item>
+        <item name="cardBackgroundColor">#CBF1E6</item>
+        <item name="textColor">#353333</item>
+        <item name="actionMenuTextColor">#353333</item>
+        <item name="tintColor">#000000</item>
+        <item name="buttonColor">#A38BB3</item>
+        <item name="toolbarColor">#758C85</item>
+        <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
+        <item name="preferenceTheme">@style/AppTheme.Light</item>
     </style>
 
-    <style name="AppTheme.NoActionBar">
+    <!--dark mode application theme without actionbar. -->
+    <style name="AppTheme.NoActionBarDark" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="backgroundColor">#2C2C2C</item>
+        <item name="cardBackgroundColor">#6C6A6A</item>
+        <item name="textColor">#D8D4D4</item>
+        <item name="actionMenuTextColor">#D8D4D4</item>
+        <item name="tintColor">#ffffff</item>
+        <item name="buttonColor">#668079</item>
+        <item name="toolbarColor">#656464</item>
+        <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
+        <item name="preferenceTheme">@style/AppTheme.Dark</item>
     </style>
 
+    <!--light mode application theme with actionbar. -->
+    <style name="AppTheme.Light" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="backgroundColor">#FFFFFF</item>
+        <item name="cardBackgroundColor">#CBF1E6</item>
+        <item name="textColor">#353333</item>
+        <item name="actionMenuTextColor">#353333</item>
+        <item name="tintColor">#000000</item>
+        <item name="buttonColor">#A38BB3</item>
+        <item name="toolbarColor">#0B6A4C</item>
+        <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
+        <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
+    </style>
+
+    <!--dark mode application theme with actionbar. -->
+    <style name="AppTheme.Dark" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="backgroundColor">#2C2C2C</item>
+        <item name="cardBackgroundColor">#6C6A6A</item>
+        <item name="textColor">#D8D4D4</item>
+        <item name="actionMenuTextColor">#D8D4D4</item>
+        <item name="tintColor">#ffffff</item>
+        <item name="buttonColor">#668079</item>
+        <item name="toolbarColor">#340B6A</item>
+        <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
+        <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
+    </style>
+
+
+    <style name="WindowAnimationTransition">
+        <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
+        <item name="android:windowExitAnimation">@android:anim/fade_out</item>
+    </style>
+    
     <style name="ToolbarColor">
         <item name="android:background">@color/colorPrimary</item>
     </style>
+
+
     
 </resources>
