--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="backgroundColor">#FFFFFF</item>
+        <item name="backgroundColor">#4C89AF</item>
         <item name="cardBackgroundColor">#CBF1E6</item>
         <item name="textColor">#353333</item>
         <item name="actionMenuTextColor">#353333</item>
@@ -41,7 +41,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="backgroundColor">#FFFFFF</item>
+        <item name="backgroundColor">#4C89AF</item>
         <item name="cardBackgroundColor">#CBF1E6</item>
         <item name="textColor">#353333</item>
         <item name="actionMenuTextColor">#353333</item>
@@ -78,6 +78,18 @@
         <item name="android:background">@color/colorPrimary</item>
     </style>
 
+    <style name="CalenderViewCustom" parent="Theme.AppCompat">
+        <item name="colorAccent">?attr/cardBackgroundColor</item>
+        <item name="colorPrimary">?attr/cardBackgroundColor</item>
+    </style>
 
+    <style name="CalenderViewDateCustomText" parent="android:TextAppearance.DeviceDefault.Small">
+        <item name="android:textColor">?attr/textColor</item>
+        <item name="android:weekNumberColor">?attr/textColor</item>
+    </style>
+
+    <style name="CalenderViewWeekCustomText" parent="android:TextAppearance.DeviceDefault.Small">
+        <item name="android:textColor">?attr/textColor</item>
+    </style>
     
 </resources>
