--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,91 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".activity.MainActivity"
-    >
+    tools:context=".activity.MainActivity">
 
-    <FrameLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".activity.MainActivity"
-        android:background="?attr/backgroundColor"
-        android:id="@+id/main_fragment_layout_holder">
+        android:layout_height="match_parent">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/main_toolbar"
-            android:background="?attr/toolbarColor"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            android:background="?attr/toolbarColor"
             android:elevation="4dp"
-            app:title="@string/app_name"
-            />
-        <!--
+            app:title="@string/app_name" />
+
         <FrameLayout
-            android:id="@+id/main_activity_details_frame_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/main_toolbar"
-            android:background="?attr/backgroundColor">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="P - - - - H"
-                android:textColor="?attr/textColor"
-                android:textSize="70sp" />
-        </FrameLayout>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/budget_list_recycler_view"
+            android:id="@+id/main_fragment_layout_holder"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/main_activity_details_frame_layout" />
+            android:background="?attr/backgroundColor"
+            tools:context=".activity.MainActivity"
+            android:layout_below="@id/main_toolbar">
 
-        <TextView
-            android:id="@+id/budget_list_loading_error"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:text="@string/budget_list_loading_error"
-            android:textColor="?attr/textColor"
-            android:textSize="40sp"
-            android:visibility="invisible" />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="15dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:src="@drawable/ic_add_black_24dp"
-            android:tint="?attr/tintColor"
-            android:backgroundTint="?attr/buttonColor"
-            app:fabSize="normal" />-->
 
-    </FrameLayout>
+            <!--
+            <FrameLayout
+                android:id="@+id/main_activity_details_frame_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/main_toolbar"
+                android:background="?attr/backgroundColor">
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="P - - - - H"
+                    android:textColor="?attr/textColor"
+                    android:textSize="70sp" />
+            </FrameLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/budget_list_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/main_activity_details_frame_layout" />
+
+            <TextView
+                android:id="@+id/budget_list_loading_error"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:text="@string/budget_list_loading_error"
+                android:textColor="?attr/textColor"
+                android:textSize="40sp"
+                android:visibility="invisible" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:layout_width="55dp"
+                android:layout_height="55dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="15dp"
+                android:layout_marginBottom="15dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:src="@drawable/ic_add_black_24dp"
+                android:tint="?attr/tintColor"
+                android:backgroundTint="?attr/buttonColor"
+                app:fabSize="normal" />-->
+
+        </FrameLayout>
+
+    </RelativeLayout>
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/main_drawer_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:headerLayout="@layout/navigation_drawer_header"
-        app:menu="@menu/navigation_drawer_menu"
         android:background="?attr/backgroundColor"
-        app:itemTextColor="?attr/textColor"
+        app:headerLayout="@layout/navigation_drawer_header"
         app:itemIconTint="?attr/tintColor"
-        />
+        app:itemTextColor="?attr/textColor"
+        app:menu="@menu/navigation_drawer_menu" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
 
