--- a/app/src/main/res/layout/expense_item.xml
+++ b/app/src/main/res/layout/expense_item.xml
@@ -13,40 +13,50 @@
         tools:ignore="PrivateResource">
 
         <TextView
-            android:id="@+id/budget_list_name_text_view"
+            android:id="@+id/expense_item_name_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
-            android:text="#50"
-            android:textSize="50sp"
+            android:text="#25"
+            android:textSize="25sp"
             android:textColor="?attr/textColor"/>
 
         <TextView
-            android:id="@+id/budget_list_value_text_view"
+            android:id="@+id/expense_item_owner_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:text="#30"
-            android:textSize="30sp"
-            android:textColor="?attr/textColor"/>
+            android:layout_marginTop="60dp"
+            android:text="#20"
+            android:textSize="20sp"
+            android:textColor="?attr/textColor"
+            />
 
 
         <TextView
-            android:id="@+id/budget_list_remaining_value_text_view"
+            android:id="@+id/expense_item_due_date_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginTop="50dp"
-            android:text="#30"
-            android:textSize="30sp"
+            android:layout_marginEnd="70dp"
+            android:text="#20"
+            android:textSize="20sp"
             android:textColor="?attr/textColor" />
         <TextView
-            android:id="@+id/budget_list_due_date_text_view"
+            android:id="@+id/expense_item_value_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end|top"
-            android:text="#30"
-            android:textSize="30sp"
-            android:textColor="?attr/textColor" />
+            android:layout_gravity="end"
+            android:layout_marginEnd="70dp"
+            android:text="#20"
+            android:textSize="20sp"
+            android:textColor="?attr/textColor"
+            />
+        <CheckBox
+            android:id="@+id/expense_item_done_check_box"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center_vertical|end"
+            />
     </androidx.cardview.widget.CardView>
 </FrameLayout>
