--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="login_error_color">#D50C0C</color>
+    <color name="darkCardBackgroundColor">#6C6A6A</color>
+    <color name="darkCardSelectedBackgroundColor">#959292</color>
+    <color name="lightCardBackgroundColor">#CBF1E6</color>
+    <color name="lightCardSelectedBackgroundColor">#A1BFB7</color>
 </resources>
