- added toolbar name change while inside of budget list details - added edit budgetlist button[PH] to enable editing selected budget list

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -16,7 +16,8 @@
         android:hint="@string/login_prompt"
         android:inputType="textEmailAddress"
         android:padding="10dp"
-        android:textColor="?attr/textColor" />
+        android:textColor="?attr/textColor"
+        />
 
     <EditText
         android:id="@+id/login_password_edit_text"
