--- a/app/src/main/res/layout/fragment_budget_list_details.xml
+++ b/app/src/main/res/layout/fragment_budget_list_details.xml
@@ -44,7 +44,8 @@
 
     <Button
         android:id="@+id/budget_list_details_delete_button"
-        android:layout_width="match_parent"
+
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
@@ -53,6 +54,7 @@
         android:text="@string/budget_list_details_delete_button"
         android:textAlignment="center"
         android:visibility="invisible"
+        android:backgroundTint="?attr/buttonColor"
         />
 
 </RelativeLayout>
