--- a/app/src/main/res/layout/fragment_edit_budget_list.xml
+++ b/app/src/main/res/layout/fragment_edit_budget_list.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         >
         <TextView
-            android:id="@+id/new_expense_name_text_view"
+            android:id="@+id/edit_budget_list_name_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -20,10 +20,10 @@
             android:textColor="?attr/textColor" />
 
         <EditText
-            android:id="@+id/new_expense_name_edit_text"
+            android:id="@+id/edit_budget_list_name_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/new_expense_name_text_view"
+            android:layout_below="@+id/edit_budget_list_name_text_view"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:backgroundTint="?attr/toolbarColor"
@@ -34,10 +34,10 @@
             />
 
         <TextView
-            android:id="@+id/new_expense_name_error_text_view"
+            android:id="@+id/edit_budget_list_name_error_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/new_expense_name_edit_text"
+            android:layout_below="@+id/edit_budget_list_name_edit_text"
             android:layout_marginStart="10dp"
             android:layout_marginTop="2dp"
             android:text="@string/new_budget_list_name_error"
@@ -45,34 +45,34 @@
             android:visibility="invisible" />
 
         <TextView
-            android:id="@+id/new_expense_amount_text_view"
+            android:id="@+id/edit_budget_list_amount_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/new_expense_name_error_text_view"
+            android:layout_below="@+id/edit_budget_list_name_error_text_view"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:text="@string/new_budget_list_value_prompt"
             android:textColor="?attr/textColor" />
 
         <EditText
-            android:id="@+id/new_expense_amount_edit_text"
+            android:id="@+id/edit_budget_list_amount_edit_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/new_expense_amount_text_view"
+            android:layout_below="@+id/edit_budget_list_amount_text_view"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:backgroundTint="?attr/toolbarColor"
             android:ems="10"
             android:hint="@string/new_budget_list_value_hint"
             android:textColor="?attr/textColor"
-            android:textColorHint="?attr/toolbarColor"
-            android:inputType="numberDecimal"/>
+            android:inputType="numberDecimal"
+            android:textColorHint="?attr/toolbarColor" />
 
         <TextView
-            android:id="@+id/new_expense_amount_error_text_view"
+            android:id="@+id/edit_budget_list_amount_error_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/new_expense_amount_edit_text"
+            android:layout_below="@+id/edit_budget_list_amount_edit_text"
             android:layout_marginStart="10dp"
             android:layout_marginTop="2dp"
             android:text="@string/new_budget_list_value_error"
@@ -80,20 +80,20 @@
             android:visibility="invisible" />
 
         <TextView
-            android:id="@+id/new_expense_due_date_text_view"
+            android:id="@+id/edit_budget_list_due_date_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/new_expense_amount_error_text_view"
+            android:layout_below="@+id/edit_budget_list_amount_error_text_view"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:text="@string/new_budget_list_due_date_prompt"
             android:textColor="?attr/textColor" />
 
         <CalendarView
-            android:id="@+id/new_expense_calendar_view"
+            android:id="@+id/edit_budget_list_calendar_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/new_expense_due_date_text_view"
+            android:layout_below="@+id/edit_budget_list_due_date_text_view"
             android:layout_centerHorizontal="true"
             android:dateTextAppearance="@style/CalenderViewDateCustomText"
             android:theme="@style/CalenderViewCustom"
@@ -101,10 +101,10 @@
             />
 
         <Button
-            android:id="@+id/new_expense_button_cancel"
+            android:id="@+id/edit_budget_list_button_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/new_expense_calendar_view"
+            android:layout_below="@id/edit_budget_list_calendar_view"
             android:layout_alignParentStart="true"
             android:layout_marginStart="10dp"
             android:backgroundTint="?attr/buttonColor"
@@ -112,10 +112,10 @@
             android:textColor="?attr/textColor" />
 
         <Button
-            android:id="@+id/new_expense_button_confirm"
+            android:id="@+id/edit_budget_list_button_confirm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/new_expense_calendar_view"
+            android:layout_below="@id/edit_budget_list_calendar_view"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="10dp"
             android:backgroundTint="?attr/buttonColor"
