--- a/app/src/main/res/layout/budget_list_item.xml
+++ b/app/src/main/res/layout/budget_list_item.xml
@@ -7,6 +7,7 @@
     android:padding="2dp">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/budget_list_item_card_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:cardBackgroundColor="?attr/cardBackgroundColor"
