--- a/app/src/main/res/layout/fragment_budget_list.xml
+++ b/app/src/main/res/layout/fragment_budget_list.xml
@@ -79,4 +79,18 @@
         android:backgroundTint="?attr/buttonColor"
         app:fabSize="normal" />
 
+    <Button
+        android:id="@+id/budget_list_delete_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="80dp"
+        android:gravity="bottom|center_horizontal"
+        android:text="@string/budget_list_delete_button"
+        android:textAlignment="center"
+        android:visibility="invisible"
+        android:backgroundTint="?attr/buttonColor"
+        />
+
 </RelativeLayout>
