-fixed registration bugs and crashes -implemented friends and waiting for confirmation friend adapter and fragment, buttons implementation TODO.

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -43,7 +43,8 @@
         android:layout_marginLeft="50dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="50dp"
-        android:text="@string/login_action" />
+        android:text="@string/login_action"
+        />
 
     <Button
         android:id="@+id/login_register_button"
