--- a/app/src/main/res/layout/navigation_drawer_header.xml
+++ b/app/src/main/res/layout/navigation_drawer_header.xml
@@ -21,7 +21,7 @@
         android:layout_centerVertical="true"
         android:layout_marginStart="10dp"
         android:layout_toEndOf="@+id/navigation_drawer_header_icon_image_view"
-        android:text="@string/logged_in_as"
+        android:text="@string/drawer_logged_in_as"
         android:textSize="20sp" />
 
     <TextView
@@ -31,13 +31,13 @@
         android:layout_marginStart="10dp"
         android:layout_below="@+id/navigation_drawer_header_app_name_text_view"
         android:layout_toEndOf="@+id/navigation_drawer_header_icon_image_view"
-        android:text="@string/loading_error"
+        android:text="@string/drawer_loading_error"
         android:textSize="15sp" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:text="@string/menu_prompt"
+        android:text="@string/drawer_menu_prompt"
         android:textSize="15sp" />
 
 
