--- a/app/src/main/res/layout/fragment_share_budget_list.xml
+++ b/app/src/main/res/layout/fragment_share_budget_list.xml
@@ -1,59 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/backgroundColor">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
+
         <LinearLayout
-            android:id="@+id/share_budget_list_linear_layout"
-            android:layout_height="wrap_content"
-            android:layout_width="fill_parent">
+            android:id="@+id/share_budget_list_search_linear_layout"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+
             <EditText
-                android:id="@+id/share_budget_list_username_search_text_view"
+                android:id="@+id/share_budget_list_username_search_edit_text"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_width="fill_parent"
+                android:hint="@string/share_budget_list_search_hint"
                 android:inputType="text"
                 android:textColor="?attr/textColor"
-                android:hint="@string/share_budget_list_search_hint"
-                android:textColorHint="?attr/toolbarColor"
-                />
+                android:textColorHint="?attr/toolbarColor" />
+
             <Button
                 android:id="@+id/share_budget_list_username_search_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
-                android:text="@string/share_budget_list_search_button"
-                android:textColor="?attr/textColor"
                 android:backgroundTint="?attr/buttonColor"
-                 />
+                android:text="@string/share_budget_list_search_button"
+                android:textColor="?attr/textColor" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/share_budget_list_not_shared_linear_layout"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/share_budget_list_search_linear_layout"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/share_budget_list_not_shared_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/share_budget_list_not_shared"
+                android:textColor="?attr/textColor" />
+
+            <View
+                android:id="@+id/share_budget_list_not_shared_line"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="#c0c0c0" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/share_budget_list_not_shared_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="0dp" />
+
+            <TextView
+                android:id="@+id/share_budget_list_not_shared_no_positions_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/share_budget_list_not_shared_no_positions"
+                android:textColor="?attr/textColor"
+                android:visibility="invisible" />
+            <TextView
+                android:id="@+id/share_budget_list_not_shared_loading_error_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/share_budget_list_error"
+                android:textColor="?attr/textColor"
+                android:visibility="invisible" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/share_budget_list_shared_linear_layout"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/share_budget_list_not_shared_linear_layout"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/share_budget_list_shared_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/share_budget_list_already_shared"
+                android:textColor="?attr/textColor" />
+
+            <View
+                android:id="@+id/share_budget_list_shared_line"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="#c0c0c0" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/share_budget_list_shared_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="0dp" />
+
+            <TextView
+                android:id="@+id/share_budget_list_shared_no_positions_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/share_budget_list_not_shared_no_positions"
+                android:textColor="?attr/textColor"
+                android:visibility="invisible" />
+            <TextView
+                android:id="@+id/share_budget_list_shared_loading_error_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/share_budget_list_error"
+                android:textColor="?attr/textColor"
+                android:visibility="invisible" />
+
         </LinearLayout>
         <Button
             android:id="@+id/share_budget_list_button_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/share_budget_list_linear_layout"
             android:layout_alignParentStart="true"
             android:layout_marginStart="10dp"
+            android:layout_below="@+id/share_budget_list_shared_linear_layout"
             android:backgroundTint="?attr/buttonColor"
             android:text="@string/new_budget_list_cancel_button"
             android:textColor="?attr/textColor" />
 
         <Button
-            android:id="@+id/share_budget_list_button_confirm"
+            android:id="@+id/share_budget_list_button_share"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/share_budget_list_linear_layout"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="10dp"
+            android:layout_below="@+id/share_budget_list_shared_linear_layout"
             android:backgroundTint="?attr/buttonColor"
             android:text="@string/share_budget_list_share_button"
-            android:textColor="?attr/textColor" />
+            android:textColor="?attr/textColor"
+            android:visibility="invisible"/>
+        <Button
+            android:id="@+id/share_budget_list_button_revoke"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="10dp"
+            android:layout_below="@+id/share_budget_list_shared_linear_layout"
+            android:backgroundTint="?attr/buttonColor"
+            android:text="@string/share_budget_list_revoke_button"
+            android:textColor="?attr/textColor"
+            android:visibility="invisible"/>
     </RelativeLayout>
 </ScrollView>
